--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -47,7 +47,7 @@
             <div class="custom-navbar-links">
                 <a href="{% url 'home' %}">
                     <i class="fa fa-home"></i>
-                    <span>Home</span>
+                    <span>Projects</span>
                 </a>
                 <a href="{% url 'network' %}">
                     <i class="fa fa-users"></i>
@@ -63,8 +63,15 @@
                 </a>
                 <a href="{% url 'feed' %}">
                     <i class="fa fa-rss"></i>
-                    <span>Feeds</span>
+                    <span>Home</span>
                 </a>
+                <a href="{% url 'competitions' %}">
+                    <i class="fa fa-trophy"></i>
+                    <span></span>
+                    </a>
+                <a href="{% url 'training' %}">
+                    <i class="fa fa-graduation-cap"></i>
+                
             </div>
 
             <!-- Profile Dropdown -->
