--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -63,7 +63,7 @@
                     </button>
                 </form>
                 <!-- Filter Button -->
-                <button class="add-project-btn" onclick="openFilterModal()">
+                <button class="btn-filter" onclick="openFilterModal()">
                     <i class="fa fa-filter"></i>
                 </button>
                 <!-- Add Project Button -->
