--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -38,7 +38,7 @@
             <div class="custom-navbar-logo">
                 <a href="{% url 'home' %}">
             <!--        <img src="/static/projects/images/logo.png" alt="DevLink Logo"> -->
-                    <span class="devlink-logo">DevLink</span>
+                    <span class="devlink-logo">DevLink.</span>
 
                 </a>
             </div>
